--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<ul class="menu">
 			<li>
-				<a href="phasmophobia.html">
+				<a href="index.html">
 					<span class="label">主页</span>
 				</a>
 			</li>
