--- a/data/introduction.html
+++ b/data/introduction.html
@@ -11,7 +11,7 @@
     <img class="logo" src="./images/logo.png" alt="logo.png"/>
     <ul class="menu">
         <li>
-            <a href="../phasmophobia.html">
+            <a href="../index.html">
                 <span class="label">主页</span>
             </a>
         </li>
