--- a/data/introduction.html
+++ b/data/introduction.html
@@ -49,7 +49,7 @@
 </nav>
 <div class="content">
     <p style='font-size: 2rem; width: 1000px; text-align: left; color: white' >
-        我是100大人，是一名斗鱼主播。我玩恐鬼症已有数年之久，游戏时长已打数千小时，等级也已上千。<br><br>
+        我是100大人，是一名斗鱼主播。我玩恐鬼症已有数年之久，游戏时长达打数千小时，等级也已上千。<br><br>
         <img src="images/introduce.jpg"><br><br>
         在这里所说的关于恐鬼症游戏的技巧全部是我个人想法，并不是说一定要这么做。<br>
         对于刚玩恐鬼症的萌新或者想要学习溜鬼的玩家来说，可以大致按照这里的内容去尝试，但是真正找到属于自己的想法是最好的。<br><br>
