--- a/data/cursed_precious.html
+++ b/data/cursed_precious.html
@@ -48,7 +48,7 @@
         </div>
     </nav>
     <div class="content">
-        <ul class="tools">
+        <ul class="tools" style="background-image: none">
             <li>
                 <h3 onclick="function music1(music1) {
                     var a1 = document.getElementById(music1);
