--- a/data/ghosts.html
+++ b/data/ghosts.html
@@ -56,7 +56,7 @@
                     t.style.display = (t.style.display === 'none')?'block':'none'
                 }
                 spi('spi')" style="font-size: 2rem">魂魄 spirit</h3>
-            <p id="spi" style="display: none">在魂魄没有猎杀的时候，在魂魄附近点燃圣木 魂魄会在三分钟内不开猎杀。</p>
+            <p id="spi" style="display: none">在魂魄没有猎杀的时候，在魂魄附近点燃圣木，魂魄会在三分钟内不开猎杀。</p>
         </li>
         <li id="g2">
             <h3 id="wraith" onclick="function wra(wra) {
@@ -64,7 +64,7 @@
                     u.style.display = (u.style.display === 'none')?'block':'none'
                 }
                 wra('wra')"  style="font-size: 2rem">魅影 wraith</h3>
-            <p id="wra" style="display: none">在魅影房间撒盐，没有绿色足印 其次魅影的穿墙只是在没有猎杀的时候才会穿墙，以理解为换鬼房。</p>
+            <p id="wra" style="display: none">在魅影房间撒盐，没有绿色足印，其次魅影的穿墙只是在没有猎杀的时候才会穿墙，以理解为换鬼房。</p>
         </li>
 
         <li id="g3">
