--- a/data/ghosts.html
+++ b/data/ghosts.html
@@ -91,7 +91,10 @@
                 c.style.display = (c.style.display === 'none')?'block':'none'
             }
             ban('ban')" style="font-size: 2rem">女妖 banshee</h3>
-            <p id="ban" style="display: none">女妖开猎杀只会锁定一个人杀：假如说你是被锁定的人，你不出房间就不会死。女妖永远不会换目标，但是你出房间了或者是死了，女妖才会再换目标。也可以用喇叭听见女妖的尖叫声，这是女妖自带的，但是不一定会给你尖叫声音。</p>
+            <p id="ban" style="display: none">女妖每次开猎杀只会锁定一个人杀，但是会有以下几种情况：<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1. 假如被锁定的玩家存活并且在房子内，女妖会一直追该名玩家，并且其他玩家并不会被女妖杀害。<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2. 假如被锁定的玩家已经牺牲或者不在房子内，女妖会开启无差别猎杀，所有玩家都会被女妖杀害。<br><br>
+                也可以用大锅听见女妖的尖叫声，这是女妖自带的，但是不一定会给你尖叫声音。</p>
         </li>
 
         <li id="g6">
@@ -100,7 +103,7 @@
                 d.style.display = (d.style.display === 'none')?'block':'none'
             }
             jin('jin')" style="font-size: 2rem">巨灵 jinn</h3>
-            <p id="jin" style="display: none">巨灵在开电闸的时候会有一个从远处跑的快，近距离不快的技能，这个技能小图基本可以无视掉，只要你会遛鬼(巨灵基本不会关电闸 但是有BUG几率关)。</p>
+            <p id="jin" style="display: none">巨灵在开电闸的时候会有一个从远处跑的快，近距离不快的技能，这个技能小图基本可以无视掉，只要你会遛鬼(巨灵基本不会关电闸但是有BUG几率关)。</p>
         </li>
 
         <li id="g7">
@@ -127,7 +130,7 @@
                 g.style.display = (g.style.display === 'none')?'block':'none'
             }
             shade('shade_')" style="font-size: 2rem">暗影 shade</h3>
-            <p id="shade_"  style="display: none">暗影是人多情况下基本完全不会出现任何互动的，在有人的情况下会写鬼魂笔记、会踩盐，但是其他的不会给(暗影有BUG：即使是人多的情况下 也会给互动)。</p>
+            <p id="shade_"  style="display: none">暗影是人多情况下基本完全不会出现任何互动的，在有人的情况下会写鬼魂笔记、会踩盐，但是其他的不会给(暗影有BUG：即使是人多的情况下也会给互动)。</p>
         </li>
 
         <li id="g10">
@@ -136,7 +139,8 @@
                 h.style.display = (h.style.display === 'none')?'block':'none'
             }
             dem('dem')" style="font-size: 2rem">恶魔 demon</h3>
-            <p id="dem" style="display: none">恶魔可以在90%就可以开启猎杀，平均会在60-70%理智之间开猎杀。如果团体理智为0，那么恶魔每次猎杀时间间隔会在30秒左右开始。</p>
+            <p id="dem" style="display: none">恶魔可以在90%就可以开启猎杀，平均会在60-70%理智之间开猎杀。如果团体理智为0，那么恶魔每次猎杀时间间隔会在30秒左右开始。<br><br>
+                若恶魔处于十字架范围内，则会在所有十字架报废之后开启猎杀。</p>
         </li>
 
         <li id="g11">
@@ -154,7 +158,8 @@
                 j.style.display = (j.style.display === 'none')?'block':'none'
             }
             onii('onii')" style="font-size: 2rem">赤鬼 oni</h3>
-            <p id="onii" style="display: none">赤鬼是一个在人多情况下非常爱现身的鬼，同时可以高速移动物品(与骚灵不同的是，赤鬼会对物品进行位移)，如果碰上赤鬼，平均每场会出现三次或以上的灵异现身(要队友全在的情况下)。</p>
+            <p id="onii" style="display: none">赤鬼是一个在人多情况下非常爱现身的鬼，同时可以高速移动物品(与骚灵不同的是，赤鬼会对物品进行位移)。<br><br>
+                如果碰上赤鬼，平均每场会出现三次或以上的灵异现身(要队友全在的情况下)。</p>
         </li>
 
         <li id="g13">
@@ -172,7 +177,8 @@
                 l.style.display = (l.style.display === 'none')?'block':'none'
             }
             han('han')" style="font-size: 2rem">寒魔 hantu</h3>
-            <p id="han" style="display: none">寒魔在刺骨寒温的地带速度比雷魂满电还要快，但是开了电闸，出了鬼房，寒魔就不快了。而且寒魔不需要卡视野，寒魔不在鬼房不会加速(噩梦难度寒魔必须有刺骨寒温，不会被隐藏)，寒魔会吐吞云吐雾(只有存活玩家才可看到)。</p>
+            <p id="han" style="display: none">寒魔在刺骨寒温的地带速度比雷魂满电还要快，但是开了电闸，出了鬼房，寒魔就不快了。<br><br>
+                而且寒魔不需要卡视野，寒魔不在鬼房不会加速(噩梦难度寒魔必须有刺骨寒温，不会被隐藏)，寒魔会吐吞云吐雾(只有存活玩家才可看到)。</p>
         </li>
 
         <li id="g15">
@@ -181,7 +187,8 @@
                 m.style.display = (m.style.display === 'none')?'block':'none'
             }
             gor('gor')" style="font-size: 2rem">御灵 goryo</h3>
-            <p id="gor" style="display: none">御灵基本只会在鬼房，但是也会乱跑(噩梦难度 御灵必须有点阵投影仪，不会被隐藏)。御灵的点阵投影仪是只能用摄像机看到，直接肉眼看是看不到的，而且在附近的玩家太多也是不会出现点阵的。</p>
+            <p id="gor" style="display: none">御灵基本只会在鬼房，但是也会乱跑(噩梦难度御灵必须有点阵投影仪，不会被隐藏)。<br><br>
+                御灵的点阵投影仪是只能用摄像机看到，直接肉眼看是看不到的，而且在附近的玩家太多也是不会出现点阵的。</p>
         </li>
 
         <li id="g16">
@@ -199,7 +206,7 @@
                     o.style.display = (o.style.display === 'none')?'block':'none'
                 }
                 onr('onr')" style="font-size: 2rem">怨灵 onryo</h3>
-            <p id="onr" style="display: none">在怨灵房间放蜡烛，怨灵不会开猎杀，而且只要蜡烛一直亮着，怨灵一直不开猎杀。如果点了蜡烛，怨灵会有一定几率在没有火的地方开猎杀，或是换鬼房。</p>
+            <p id="onr" style="display: none">在怨灵房间放蜡烛，怨灵不会开猎杀，而且只要蜡烛一直亮着，怨灵一直不开猎杀。如果点了蜡烛，怨灵会有一定几率在没有火的地方开猎杀。</p>
         </li>
 
         <li id="g18">
@@ -217,7 +224,7 @@
                     q.style.display = (q.style.display === 'none')?'block':'none'
                 }
                 rai('rai')" style="font-size: 2rem">雷魂 raiju</h3>
-            <p id="rai" style="display: none">雷魂开始猎杀速度很快，吸取附近电子设备是有上限的，只要不暴露视野，雷魂速度就会那么快 不会再加。</p>
+            <p id="rai" style="display: none">雷魂开始猎杀速度很快，吸取附近电子设备是有上限的，只要不暴露视野，雷魂速度就会那么快不会再加。</p>
         </li>
 
         <li id="g20">
@@ -226,7 +233,7 @@
                     r.style.display = (r.style.display === 'none')?'block':'none'
                 }
                 oba('oba')" style="font-size: 2rem">幻妖 obake</h3>
-            <p id="oba" style="display: none">幻妖的指纹是有几率产生六指的(据说幻妖的第四个指纹是六指，不过本人并没有统计过，因为不能明确的知道哪一个指纹第第几个)，但是不一定会给 可以用排除法(噩梦难度，幻妖证据必有指纹)。</p>
+            <p id="oba" style="display: none">幻妖的指纹是有几率产生六指的(噩梦难度，幻妖证据必有指纹)。</p>
         </li>
 
         <li id="g21">
@@ -235,7 +242,43 @@
                     s.style.display = (s.style.display === 'none')?'block':'none'
                 }
                 mim('mim')" style="font-size: 2rem">拟魂 mimic</h3>
-            <p id="mim" style="display: none">拟魂自带灵球(注意灵球是假的！是特性！不是证据！)，专家难度会有四个证据，噩梦难度会有三个证据。</p>
+            <p id="mim" style="display: none">拟魂自带灵球(注意灵球是假的！是特性！不是证据！)，专家难度会有四个证据，噩梦难度会有三个证据。<br><br>
+                拟魂每次猎杀会模仿不同的鬼，但是如果两次猎杀的间隔太短是不会变更的。<br><br>
+                拟魂模仿幻妖时也会出现六指。</p>
+        </li>
+
+        <li id="g22">
+            <h3 id="deogen" onclick="function deo(deo) {
+                    var s = document.getElementById(deo)
+                    s.style.display = (s.style.display === 'none')?'block':'none'
+                }
+                deo('deo')" style="font-size: 2rem">雾影 deogen</h3>
+            <p id="deo" style="display: none">雾影可以理解为是纯瞎子，但是又拥有透视(不可以躲柜子)，在猎杀时只会追随一个目标(距离最近优先)：<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;雾影的视野并非360°，也就是说只有直线视野。<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果目标不在雾影的视野里则会一直处于加速状态(与满电雷魂差不多)。<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果目标在雾影的视野里则会一直处于减速状态(比无视野亡魂略慢)。<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果有另一名玩家距离雾影足够近(尽量不要尝试)或者点燃圣木可以使雾影更换目标。</p>
+        </li>
+
+        <li id="g23">
+            <h3 id="moroi" onclick="function mor(mor) {
+                    var s = document.getElementById(mor)
+                    s.style.display = (s.style.display === 'none')?'block':'none'
+                }
+                mor('mor')" style="font-size: 2rem">魔洛伊 moroi</h3>
+            <p id="mor" style="display: none">魔洛伊在猎杀时的移速与受诅咒目标理智成反比。<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;若一名玩家使用通灵盒并且有回应则会成为魔洛伊的诅咒目标(该名玩家的理智会急速下降)。<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;若需要结束诅咒只需要使用理智药，之后下一名使用通灵盒并且有回应的玩家会成为新的诅咒目标。</p>
+        </li>
+
+        <li id="g24">
+            <h3 id="thaye" onclick="function tha(tha) {
+                    var s = document.getElementById(tha)
+                    s.style.display = (s.style.display === 'none')?'block':'none'
+                }
+                tha('tha')" style="font-size: 2rem">沙耶 thaye</h3>
+            <p id="tha" style="display: none">沙耶猎杀时的移速和猎杀频率与游戏时间成反比。<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;随着游戏时间的增加沙耶的猎杀频率从恶魔逐渐下降到暗影；猎杀时移速从满电雷魂逐渐下降到无视野亡魂。</p>
         </li>
     </ul>
     <footer>
