--- a/data/tools.html
+++ b/data/tools.html
@@ -145,7 +145,8 @@
                 k.style.display = (k.style.display === 'none')?'block':'none'
             }
             sensor('sensor')" style="font-size: 2rem">运动传感器与声音传感器 Motion Sensor&Sound Sensor</h3>
-                <p id="sensor" style="display: none">可选任务里。按F放在墙上，灯光亮起证明鬼靠近过传感器(灰黑色的是运动传感器，白色的是声音传感器)。</p>
+                <p id="sensor" style="display: none">可选任务里。按F将运动传感器放在墙上，灯光亮起证明鬼靠近过传感器。<br><br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;话筒是声音传感器，对于判定孪魂是个不错的道具。</p>
             </li>
 
             <li>
