--- a/data/ghosts.html
+++ b/data/ghosts.html
@@ -121,7 +121,7 @@
                 f.style.display = (f.style.display === 'none')?'block':'none'
             }
             reve('reve')" style="font-size: 2rem">亡魂 revenant</h3>
-            <p id="reve" style="display: none">亡魂有你视野的情况下速度是最快的，而且已经是上限了不会再加速，没有你视野情况下速度是所有鬼里面最慢的。</p>
+            <p id="reve" style="display: none">亡魂视野里有人的情况下移速是最快的(大概是3秒左右开始加速)，而且已经是上限了不会再加速；视野里没人情况下速度是所有鬼里面最慢的。</p>
         </li>
 
         <li id="g9">
@@ -149,7 +149,7 @@
                 i.style.display = (i.style.display === 'none')?'block':'none'
             }
             yur('yur')" style="font-size: 2rem">幽灵 Yurei</h3>
-            <p id="yur" style="display: none">灵产生灵异事件或是互动都会掉很多理智，但是只是比所有鬼产生的互动灵异事件要掉多那么一点点。碰见幽灵可以用排除法。</p>
+            <p id="yur" style="display: none">幽灵产生灵异事件或是互动都会掉很多理智，但是只是比所有鬼产生的互动灵异事件要掉多那么一点点。碰见幽灵可以用排除法。</p>
         </li>
 
         <li id="g12">
@@ -178,7 +178,7 @@
             }
             han('han')" style="font-size: 2rem">寒魔 hantu</h3>
             <p id="han" style="display: none">寒魔在刺骨寒温的地带速度比雷魂满电还要快，但是开了电闸，出了鬼房，寒魔就不快了。<br><br>
-                而且寒魔不需要卡视野，寒魔不在鬼房不会加速(噩梦难度寒魔必须有刺骨寒温，不会被隐藏)，寒魔会吐吞云吐雾(只有存活玩家才可看到)。</p>
+                而且寒魔不需要卡视野，寒魔不在鬼房不会加速(噩梦难度：寒魔必须有刺骨寒温，不会被隐藏)，寒魔会吐吞云吐雾(只有存活玩家才可看到)。</p>
         </li>
 
         <li id="g15">
@@ -187,7 +187,7 @@
                 m.style.display = (m.style.display === 'none')?'block':'none'
             }
             gor('gor')" style="font-size: 2rem">御灵 goryo</h3>
-            <p id="gor" style="display: none">御灵基本只会在鬼房，但是也会乱跑(噩梦难度御灵必须有点阵投影仪，不会被隐藏)。<br><br>
+            <p id="gor" style="display: none">御灵基本只会在鬼房，但是也会乱跑(噩梦难度：御灵必须有点阵投影仪，不会被隐藏)。<br><br>
                 御灵的点阵投影仪是只能用摄像机看到，直接肉眼看是看不到的，而且在附近的玩家太多也是不会出现点阵的。</p>
         </li>
 
@@ -224,7 +224,7 @@
                     q.style.display = (q.style.display === 'none')?'block':'none'
                 }
                 rai('rai')" style="font-size: 2rem">雷魂 raiju</h3>
-            <p id="rai" style="display: none">雷魂开始猎杀速度很快，吸取附近电子设备是有上限的，只要不暴露视野，雷魂速度就会那么快不会再加。</p>
+            <p id="rai" style="display: none">雷魂猎杀时如果附近有电子设备则移速很快，如果脱离电子设备范围则降低移速。吸取附近电子设备是有上限的，只要不暴露视野，雷魂速度就会那么快不会再加。</p>
         </li>
 
         <li id="g20">
@@ -233,7 +233,7 @@
                     r.style.display = (r.style.display === 'none')?'block':'none'
                 }
                 oba('oba')" style="font-size: 2rem">幻妖 obake</h3>
-            <p id="oba" style="display: none">幻妖的指纹是有几率产生六指的(噩梦难度，幻妖证据必有指纹)。</p>
+            <p id="oba" style="display: none">幻妖的指纹是有几率产生六指的(噩梦难度：幻妖证据必有指纹)。</p>
         </li>
 
         <li id="g21">
