--- a/data/ghosts.html
+++ b/data/ghosts.html
@@ -73,7 +73,7 @@
                     a.style.display = (a.style.display === 'none')? 'block':'none'
                 }
                 pha('pha')"  style="font-size: 2rem">幻影 phatom</h3>
-            <p id="pha" style="display: none"> 幻影在灵异事件现身时拍照会消失，但是灵异事件声音不会消失。开猎杀时，幻影会隐身两秒出现一秒，不容易被看到。</p>
+            <p id="pha" style="display: none">幻影在灵异事件现身时拍照会消失，但是灵异事件声音不会消失。开猎杀时，幻影会隐身两秒出现一秒，不容易被看到。</p>
         </li>
 
         <li id="g4" >
@@ -257,7 +257,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;雾影的视野并非360°，也就是说只有直线视野。<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果目标不在雾影的视野里则会一直处于加速状态(与满电雷魂差不多)。<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果目标在雾影的视野里则会一直处于减速状态(比无视野亡魂略慢)。<br>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果有另一名玩家距离雾影足够近(尽量不要尝试)或者点燃圣木可以使雾影更换目标。</p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果目标脱离雾影视野且另一名玩家距离雾影足够近(尽量不要尝试)或者点燃圣木可以使雾影更换目标。</p>
         </li>
 
         <li id="g23">
