--- a/data/ghosts.html
+++ b/data/ghosts.html
@@ -73,7 +73,7 @@
                     a.style.display = (a.style.display === 'none')? 'block':'none'
                 }
                 pha('pha')"  style="font-size: 2rem">幻影 phatom</h3>
-            <p id="pha" style="display: none">幻影在灵异事件现身时拍照会消失，但是灵异事件声音不会消失。开猎杀时，幻影会隐身两秒出现一秒，不容易被看到。</p>
+            <p id="pha" style="display: none"> 幻影在灵异事件现身时拍照会消失，但是灵异事件声音不会消失。开猎杀时，幻影会隐身两秒出现一秒，不容易被看到。</p>
         </li>
 
         <li id="g4" >
@@ -148,7 +148,7 @@
                 var i = document.getElementById(yur)
                 i.style.display = (i.style.display === 'none')?'block':'none'
             }
-            yur('yur')" style="font-size: 2rem">幽灵 Yurei</h3>
+            yur('yur')" style="font-size: 2rem">幽灵 yurei</h3>
             <p id="yur" style="display: none">幽灵产生灵异事件或是互动都会掉很多理智，但是只是比所有鬼产生的互动灵异事件要掉多那么一点点。碰见幽灵可以用排除法。</p>
         </li>
 
@@ -178,7 +178,7 @@
             }
             han('han')" style="font-size: 2rem">寒魔 hantu</h3>
             <p id="han" style="display: none">寒魔在刺骨寒温的地带速度比雷魂满电还要快，但是开了电闸，出了鬼房，寒魔就不快了。<br><br>
-                而且寒魔不需要卡视野，寒魔不在鬼房不会加速(噩梦难度：寒魔必须有刺骨寒温，不会被隐藏)，寒魔会吐吞云吐雾(只有存活玩家才可看到)。</p>
+                而且寒魔不需要卡视野，寒魔不在鬼房不会加速(噩梦难度：寒魔必须有刺骨寒温，不会被隐藏)。</p>
         </li>
 
         <li id="g15">
@@ -257,7 +257,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;雾影的视野并非360°，也就是说只有直线视野。<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果目标不在雾影的视野里则会一直处于加速状态(与满电雷魂差不多)。<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果目标在雾影的视野里则会一直处于减速状态(比无视野亡魂略慢)。<br>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果目标脱离雾影视野且另一名玩家距离雾影足够近(尽量不要尝试)或者点燃圣木可以使雾影更换目标。</p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如果有另一名玩家距离雾影足够近(尽量不要尝试)或者点燃圣木可以使雾影更换目标。</p>
         </li>
 
         <li id="g23">
